--- a/Modules/Membership/Account/Login/LoginPage.cshtml
+++ b/Modules/Membership/Account/Login/LoginPage.cshtml
@@ -1,4 +1,4 @@
-﻿@inject Serenity.ITextLocalizer Localizer
+@inject Serenity.ITextLocalizer Localizer
 @inject IDataMigrations DataMigrations
 @inject Microsoft.Extensions.Options.IOptions<Serenity.Extensions.EnvironmentSettings> EnvironmentOptions
 @{
